--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
                     </tr>
                     <tr>
                         <td align="center">
-                            <a href="#"
+                            <a href="contacto.html"
                                 style="display: inline-block; padding: 18px 50px; background-color: #56e341; color: #003139; text-decoration: none; font-weight: 800; font-size: 16px; border-radius: 12px;">
                                 Jetzt anfragen
                             </a>
@@ -1026,12 +1026,11 @@
     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="max-width: 600px;">
         <tr>
             <td align="center" style="padding: 20px; font-size: 12px; color: #94a3b8;">
-                <a href="{$unsubscribe}"
-                    style="color: #94a3b8; text-decoration: underline; margin: 0 10px;">Abmelden</a>
+                <span style="color: #94a3b8; text-decoration: underline; margin: 0 10px;">Abmelden</span>
                 <span style="color: #e2e8f0;">|</span>
-                <a href="#" style="color: #94a3b8; text-decoration: underline; margin: 0 10px;">Datenschutz</a>
+                <span style="color: #94a3b8; text-decoration: underline; margin: 0 10px;">Datenschutz</span>
                 <span style="color: #e2e8f0;">|</span>
-                <a href="#" style="color: #94a3b8; text-decoration: underline; margin: 0 10px;">Impressum</a>
+                <span style="color: #94a3b8; text-decoration: underline; margin: 0 10px;">Impressum</span>
             </td>
         </tr>
     </table>
