--- a/index.html
+++ b/index.html
@@ -758,9 +758,11 @@
                                     </td>
                                     <td
                                         style="vertical-align: middle; padding-left: 30px; border-left: 1px solid #e2e8f0;">
+                                        <a href="https://deutschebank-netherlands.com/" target="_blank">
                                         <img src="https://imagizer.imageshack.com/v2/100x75q70/924/j2W960.png"
                                             alt="Deutsche Bank" width="100"
                                             style="height: auto; width: 100px; max-width: 100px; display: block;">
+                                        </a>
                                     </td>
                                 </tr>
                             </table>
