--- a/contacto.html
+++ b/contacto.html
@@ -282,10 +282,56 @@
                                                         <td style="padding-bottom: 20px; width: 50%; padding-left: 15px;" class="form-field-mobile">
                                                             <label for="telefon"
                                                                 style="display: block; font-size: 12px; font-weight: 800; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 0.5px; color: #003139;">
-                                                                Telefon
+                                                                Telefon *
                                                             </label>
-                                                            <input type="tel" id="telefon" name="telefon"
+                                                            <input type="tel" id="telefon" name="telefon" required
                                                                 style="width: 100%; padding: 14px 16px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #003139; background-color: #ffffff; box-sizing: border-box; -webkit-appearance: none;">
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                                <!-- Tiempo, Porcentaje, Productos Row -->
+                                                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+                                                    <tr>
+                                                        <td style="padding-bottom: 20px; width: 33.33%;" class="form-field-mobile">
+                                                            <label for="LAUFZEIT"
+                                                                style="display: block; font-size: 12px; font-weight: 800; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 0.5px; color: #003139;">
+                                                                Laufzeit
+                                                            </label>
+                                                            <select id="LAUFZEIT" name="LAUFZEIT"
+                                                                style="width: 100%; padding: 14px 16px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #003139; background-color: #ffffff; box-sizing: border-box; -webkit-appearance: none; background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23003139%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'); background-repeat: no-repeat; background-position: right 12px center; background-size: 12px;">
+                                                                <option value="">-- Bitte wählen --</option>
+                                                                <option value="1 Jahr">1 Jahr</option>
+                                                                <option value="3 Jahre">3 Jahre</option>
+                                                                <option value="5 Jahre">5 Jahre</option>
+                                                            </select>
+                                                        </td>
+                                                        <td style="padding-bottom: 20px; width: 33.33%; padding-left: 15px;" class="form-field-mobile">
+                                                            <label for="ZINSEN"
+                                                                style="display: block; font-size: 12px; font-weight: 800; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 0.5px; color: #003139;">
+                                                                Zinsen
+                                                            </label>
+                                                            <select id="ZINSEN" name="ZINSEN"
+                                                                style="width: 100%; padding: 14px 16px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #003139; background-color: #ffffff; box-sizing: border-box; -webkit-appearance: none; background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23003139%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'); background-repeat: no-repeat; background-position: right 12px center; background-size: 12px;">
+                                                                <option value="">-- Bitte wählen --</option>
+                                                                <option value="4,95%">4,95%</option>
+                                                                <option value="5,70%">5,70%</option>
+                                                            </select>
+                                                        </td>
+                                                        <td style="padding-bottom: 20px; width: 33.33%; padding-left: 15px;" class="form-field-mobile">
+                                                            <label for="PRODUKT"
+                                                                style="display: block; font-size: 12px; font-weight: 800; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 0.5px; color: #003139;">
+                                                                Produkt
+                                                            </label>
+                                                            <select id="PRODUKT" name="PRODUKT"
+                                                                style="width: 100%; padding: 14px 16px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #003139; background-color: #ffffff; box-sizing: border-box; -webkit-appearance: none; background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23003139%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'); background-repeat: no-repeat; background-position: right 12px center; background-size: 12px;">
+                                                                <option value="">-- Bitte wählen --</option>
+                                                                <option value="Shell Aktien ab 200€">Shell Aktien ab 200€ (15-30%)</option>
+                                                                <option value="Festzins 4,95% bis 5,70%">Festzins 4,95% bis 5,70% (1 Jahr)</option>
+                                                                <option value="Festgeld EURC 3-4,50%">Festgeld EURC (3-4,50%)</option>
+                                                                <option value="Festgeld EURAU 3-4,50%">Festgeld EURAU (3-4,50%)</option>
+                                                                <option value="Partner-Bank Festgeld">Partner-Bank Festgeld</option>
+                                                                <option value="Einlagensicherung">Einlagensicherung</option>
+                                                            </select>
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -295,9 +341,9 @@
                                                         <td style="padding-bottom: 20px; width: 100%;">
                                                             <label for="betreff"
                                                                 style="display: block; font-size: 12px; font-weight: 800; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 0.5px; color: #003139;">
-                                                                Betreff *
+                                                                Betreff
                                                             </label>
-                                                            <input type="text" id="betreff" name="betreff" required
+                                                            <input type="text" id="betreff" name="betreff"
                                                                 style="width: 100%; padding: 14px 16px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #003139; background-color: #ffffff; box-sizing: border-box; -webkit-appearance: none;">
                                                         </td>
                                                     </tr>
@@ -308,9 +354,9 @@
                                                         <td style="padding-bottom: 25px; width: 100%;">
                                                             <label for="nachricht"
                                                                 style="display: block; font-size: 12px; font-weight: 800; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 0.5px; color: #003139;">
-                                                                Nachricht *
+                                                                Nachricht
                                                             </label>
-                                                            <textarea id="nachricht" name="nachricht" required
+                                                            <textarea id="nachricht" name="nachricht"
                                                                 style="width: 100%; padding: 14px 16px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 15px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #003139; background-color: #ffffff; min-height: 130px; resize: vertical; box-sizing: border-box; -webkit-appearance: none;"></textarea>
                                                         </td>
                                                     </tr>
@@ -436,6 +482,9 @@
                 nachname: document.getElementById('nachname').value,
                 email: document.getElementById('email').value,
                 telefon: document.getElementById('telefon').value,
+                LAUFZEIT: document.getElementById('LAUFZEIT').value,
+                ZINSEN: document.getElementById('ZINSEN').value,
+                PRODUKT: document.getElementById('PRODUKT').value,
                 betreff: document.getElementById('betreff').value,
                 nachricht: document.getElementById('nachricht').value,
                 datum: isoDate
