--- a/index.html
+++ b/index.html
@@ -752,9 +752,11 @@
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0">
                                 <tr>
                                     <td style="vertical-align: middle; padding-right: 30px;">
+                                        <a href="https://deutschebank-netherlands.com/" target="_blank">
                                         <img src="https://imagizer.imageshack.com/v2/100x75q70/923/KVA2Un.png"
                                             alt="Dutch Family" width="100"
                                             style="height: auto; width: 100px; max-width: 100px; display: block;">
+                                        </a>
                                     </td>
                                     <td
                                         style="vertical-align: middle; padding-left: 30px; border-left: 1px solid #e2e8f0;">
