--- a/contacto.html
+++ b/contacto.html
@@ -434,7 +434,7 @@
                                     <td style="padding-top: 15px; font-size: 11px; color: #a5b4bc; line-height: 1.8; opacity: 0.8; text-align: center;">
                                         <strong style="color: #ffffff;">Dutch Family B.V.</strong><br>
                                         🇳🇱 Hauptsitz: Wilhelminakade 173, 3072 Rotterdam, Netherlands | Tel: +31 97010255546<br>
-                                        🇩🇪 Kundenservice München: Mies-van-der-Rohe-Straße 6, 80807 München | Tel: +49 8988997286<br>
+                                        🇩🇪 Marketing und Vertrieb: Gustav-Heinemann-Ufer 72-74, 50968 Köln | Tel: +49 22157279122<br>
                                         <br>
                                         © 2026 Dutch Family B.V. Alle Rechte vorbehalten.
                                     </td>
