--- a/email-template.html
+++ b/email-template.html
@@ -339,20 +339,21 @@
                                         <td style="padding-bottom: 15px; width: 50%; padding-left: 8px;">
                                             <label style="display: block; color: #374151; font-size: 12px; font-weight: bold; margin-bottom: 6px;">Bevorzugte Bank</label>
                                             <select id="banco" style="width: 100%; padding: 12px; border: 1px solid #D1D5DB; border-radius: 6px; font-size: 13px; background: white; box-sizing: border-box;">
-                                                <option>Deutsche Bank & Barclays</option>
-                                                <option>Raiffeisen Bank</option>
+                                                <option>Barclays (Digital)</option>
+                                                <option>Raiffeisen Bank (Digital)</option>
                                                 <option>Revolut / (Digital)</option>
                                                 <option>Bitpanda / (Digital)</option>
                                                 <option>Deutsche Bank / (Digital)</option>
                                                 <option>Bitpanda / (Digital)</option>
                                                 <option>Circle / (Digital)</option>
+                                                <option>Barclays (classic)</option>
                                                 <option>Revolut / (classic)</option>
                                                 <option>Bitpanda / (classic)</option>
                                                 <option>Raiffeisen Bank / (classic)</option>
                                                 <option>Deutsche Bank / (classic)</option>
-                                                <option>eurau / (4,5)</option>
-                                                <option>eurc / (4,5)</option>
-                                                <option>usd / (8)</option>
+                                                <option>eurau /  bis (4,5) Jahr</option>
+                                                <option>eurc / bis (4,5) Jahr </option>
+                                                <option>usd /  bis (8) Jahr</option>
                                             </select>
                                         </td>
                                     </tr>
