--- a/partnerbanken.html
+++ b/partnerbanken.html
@@ -478,27 +478,25 @@
                     <tr>
                         <td style="padding: 25px; text-align: center;">
                             <p style="color: #64748B; font-size: 13px; margin: 0 0 10px 0;">
-                                <strong style="color: #1E293B;">Dutch Family</strong> - International tätiges Unternehmen
+                                <strong style="color: #1E293B;">Dutch Family B.V.</strong>
                             </p>
-                            <p style="color: #94A3B8; font-size: 11px; margin: 0 0 15px 0;">
-                                Strategische Kapitalanlagen und institutionelles Portfoliomanagement.
+                            <p style="color: #64748B; font-size: 11px; margin: 0 0 5px 0;">
+                                🇳🇱 Hauptsitz: Wilhelminakade 173, 3072 Rotterdam, Netherlands
                             </p>
-                            <table width="100%" cellpadding="0" cellspacing="0" border="0">
-                                <tr>
-                                    <td align="center">
-                                        <a href="#" style="color: #64748B; font-size: 11px; text-decoration: none; margin: 0 12px;">Datenschutz</a>
-                                        <a href="#" style="color: #64748B; font-size: 11px; text-decoration: none; margin: 0 12px;">AGB</a>
-                                        <a href="#" style="color: #64748B; font-size: 11px; text-decoration: none; margin: 0 12px;">Impressum</a>
-                                        <a href="#" style="color: #64748B; font-size: 11px; text-decoration: none; margin: 0 12px;">Widerruf</a>
-                                        <a href="#" style="color: #64748B; font-size: 11px; text-decoration: none; margin: 0 12px;">Compliance</a>
-                                    </td>
-                                </tr>
-                            </table>
+                            <p style="color: #64748B; font-size: 11px; margin: 0 0 5px 0;">
+                                🇳🇱 Web: <a href="https://dutch-family.de" style="color: #64748B; text-decoration: none;">https://dutch-family.de</a> | Email: <a href="mailto:info@dutch-family.de" style="color: #64748B; text-decoration: none;">info@dutch-family.de</a>
+                            </p>
+                            <p style="color: #64748B; font-size: 11px; margin: 0 0 5px 0;">
+                                🇩🇪 Kundenservice Berlin: Charlottenstraße 4, 10969 Berlin
+                            </p>
+                            <p style="color: #64748B; font-size: 11px; margin: 0 0 5px 0;">
+                                🇩🇪 Kundenservice München: Mies-van-der-Rohe-Straße 6, 80807 München
+                            </p>
+                            <p style="color: #64748B; font-size: 11px; margin: 0 0 15px 0;">
+                                🇩🇪 Marketing und Vertrieb: Gustav-Heinemann-Ufer 72-74, 50968 Köln
+                            </p>
                             <p style="color: #94A3B8; font-size: 9px; margin: 20px 0 0 0; text-transform: uppercase; letter-spacing: 0.5px;">
-                                © 2024 Dutch Family Office. Alle Rechte vorbehalten.
-                            </p>
-                            <p style="color: #94A3B8; font-size: 8px; margin: 10px 0 0 0;">
-                                Investitionen in Finanzprodukte sind mit Risiken verbunden.
+                                © 2026 Dutch Family B.V. Alle Rechte vorbehalten.
                             </p>
                         </td>
                     </tr>
