--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                                 <tr>
                                     <td align="center">
-                                        <a href="https://shell-international.de/contacto.html"
+                                        <a href="#kontaktformular"
                                             style="display: inline-block; padding: 16px 40px; background-color: #003139; color: #ffffff; text-decoration: none; font-weight: 800; font-size: 16px; border-radius: 12px; text-align: center;">
                                             Exposé anfordern
                                         </a>
